@@ -1,3 +1,3 @@
-EBUILD ghostscript-0.ebuild 621 RMD160 f7bace2bfe85236c17f027313832765bf6c36303 SHA1 c0bd05713ce9b145bbcb8d690da2909f8aa9de55 SHA256 a9da313fea5a4b5633e2529091411f9005ad4bd25ddd5220e471678eb3953eaa
-MISC ChangeLog 996 RMD160 1b5393155d22897e5e64a97a0fd620f01df8c846 SHA1 57cb2302da3240307e0470cd70b3177300692909 SHA256 5c38008c262e425dab5288f61d3e5a3ee9a95767925f494c55de871b9791ff47
+EBUILD ghostscript-0.ebuild 559 RMD160 cce4d7931a8fc40bd0b427ae691991bf2c8b6443 SHA1 123bb10ed6a9a9d3ae86c22d92ad323df51988c6 SHA256 fa3177d48c69e4fa0a3a8b078d75cf246fa5545a3e365a45a676e464950810e1
+MISC ChangeLog 1161 RMD160 d4514cdd82cbdc68d447c9e7bcefec045bc1823e SHA1 a2b52698862cca8a493197c28b7914a3b74acd38 SHA256 9054ef62efac98d4166f7528ac3d8a6dc832a96cd0afc3b2718eb6efe253ab84
 MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
